fixed bugged where login error was not showing

--- a/app/assets/stylesheets/access.scss
+++ b/app/assets/stylesheets/access.scss
@@ -351,14 +351,28 @@ div.entry-tooltip-temporary span {
     height: 100vh;
     width: 100vw;
     position: relative;
+    min-width: 240px;
   }
 
   div#login-entry {
-    padding-top: 33px;
+    padding-top: 50px;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
     min-height: 354px;
+  }
+
+  #entry-flash-invalid {
+    font-family: Helvetica;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+    background-color: red;
+    opacity: 0.5;
+    height: 50px;
+    line-height: 20px;
+    margin: 0;
+    vertical-align: middle;
   }
 
   div.entry-right {
